--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Shankar Vasudevan" />
-   <link href="http://feeds.feedburner.com/www-polyglotted-org" rel="alternate" title="Polyglotted" type="application/atom+xml" />
+   <link href="atom.xml" rel="alternate" title="Polyglotted" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -47,7 +47,7 @@ var WRInitTime=(new Date()).getTime();
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/www-polyglotted-org">
+      <a href="atom.xml">
         <img src="/images/rss_icon.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
