--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Shankar Vasudevan" />
-   <link href="http://feeds.feedburner.com/www-polyglotted-org" rel="alternate" title="Polyglotted Org" type="application/atom+xml" />
+   <link href="http://feeds.feedburner.com/www-polyglotted-org" rel="alternate" title="Polyglotted IO" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -26,24 +26,22 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Polyglotted.org</a>
+    <a href="/">polyglotted.io</a>
   </div>
-  
+
   {{ content }}
-  
+
   <div class="footer">
     <div class="contact">
       <p>
-        Polyglotted Org<br />
-        Owner: Shankar Vasudevan
-        shankar@polyglotted.org<br /><br />
+        Polyglotted IO<br />
         Powered by <a href="http://github.com/mojombo/jekyll">Jekyll</a>
       </p>
     </div>
     <div class="contact">
       <p>
         <a href="http://github.com/polyglotted/">github.com/polyglotted</a><br />
-        <a href="http://twitter.com/vshank77/">Shankar Vasudevan</a><br />
+        <a href="http://twitter.com/polyglottedorg/">Polyglotted Org</a><br />
       </p>
     </div>
     <div class="rss">
